--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8" content="width=device-width, initial-scale=1" name="viewport" />
   <title>Sam's Personal Website</title>
 
   <!-- Stylesheets -->
