Meta viewport is causing issues, fix later

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta charset="utf-8" content="width=device-width, initial-scale=1" name="viewport" />
+  <meta charset="utf-8">
+  <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"> -->
   <title>Sam's Personal Website</title>
 
   <!-- Stylesheets -->
@@ -68,7 +70,7 @@
     <img src="img/mountain.png" alt="mountain picture" />
   </div>
 
-  <div class="middle-container">
+  <div class="middle-container container-fluid">
     <div class="profile container">
       <img class="profile-pic" src="img/me-circle.png" alt="picture of sam" width="250px" height="250px">
       <h2 class="section-title">Hey there!</h2>
